{
  "version": 4,
  "terraform_version": "1.3.4",
  "serial": 599,
  "lineage": "1c6e4961-8a64-136a-d259-ebef1176519b",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "web-1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-08c40ec9ead489470",
            "arn": "arn:aws:ec2:us-east-1:049514682411:instance/i-05cbc84df3a437b08",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-05cbc84df3a437b08",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.nano",
            "ipv6_address_count": 0,
            "key_name": "terraform2",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-02c5c081e8e4e8ffd",
            "private_dns": "ip-10-50-1-219.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.50.1.219",
            "public_ip": "54.144.111.189",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0336eca3357993ed7",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-03aa9de19f86743e9",
            "tags": {
              "Name": "HelloWorld-1",
              "enviroment": "Prod"
            },
            "tags_all": {
              "Name": "HelloWorld-1",
              "enviroment": "Prod"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-001638ab192e0e3b0"
            ]
          },
          "dependencies": [
            "aws_security_group.allow_all",
            "aws_subnet.public-subnets",
            "aws_vpc.nallabirudu95"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "pawan",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:049514682411:internet-gateway/igw-09f2d70be690c76b1",
            "id": "igw-09f2d70be690c76b1",
            "owner_id": "049514682411",
            "tags": {
              "Name": "narendra"
            },
            "tags_all": {
              "Name": "narendra"
            },
            "vpc_id": "vpc-0e8cabe7eec389807"
          },
          "dependencies": [
            "aws_vpc.nallabirudu95"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private-routing-table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:049514682411:route-table/rtb-0d4f78a52550c33af",
            "id": "rtb-0d4f78a52550c33af",
            "owner_id": "049514682411",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "name": "private-routing-table"
            },
            "tags_all": {
              "name": "private-routing-table"
            },
            "timeouts": null,
            "vpc_id": "vpc-0e8cabe7eec389807"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.nallabirudu95"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public-routing-table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:049514682411:route-table/rtb-08c1b7859eea70e89",
            "id": "rtb-08c1b7859eea70e89",
            "owner_id": "049514682411",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-09f2d70be690c76b1",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "name": "public-routing-table"
            },
            "tags_all": {
              "name": "public-routing-table"
            },
            "timeouts": null,
            "vpc_id": "vpc-0e8cabe7eec389807"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.pawan",
            "aws_vpc.nallabirudu95"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "terraform-private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0c2e25f358915cab7",
            "route_table_id": "rtb-0d4f78a52550c33af",
            "subnet_id": "subnet-057cdaa2f68ba1deb"
          },
          "dependencies": [
            "aws_route_table.private-routing-table",
            "aws_subnet.private-subnets",
            "aws_vpc.nallabirudu95"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0cb5e5db176d43132",
            "route_table_id": "rtb-0d4f78a52550c33af",
            "subnet_id": "subnet-044c4b4f1914b957a"
          },
          "dependencies": [
            "aws_route_table.private-routing-table",
            "aws_subnet.private-subnets",
            "aws_vpc.nallabirudu95"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0409ce937b26fa11d",
            "route_table_id": "rtb-0d4f78a52550c33af",
            "subnet_id": "subnet-06659d37ca5fc7df4"
          },
          "dependencies": [
            "aws_route_table.private-routing-table",
            "aws_subnet.private-subnets",
            "aws_vpc.nallabirudu95"
          ]
        },
        {
          "index_key": 3,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-02bc5b663c4a84dd3",
            "route_table_id": "rtb-0d4f78a52550c33af",
            "subnet_id": "subnet-054f2cc3d56bf4773"
          },
          "dependencies": [
            "aws_route_table.private-routing-table",
            "aws_subnet.private-subnets",
            "aws_vpc.nallabirudu95"
          ]
        },
        {
          "index_key": 4,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0e7efb98828e409ca",
            "route_table_id": "rtb-0d4f78a52550c33af",
            "subnet_id": "subnet-0c3ce9c7f74b075f2"
          },
          "dependencies": [
            "aws_route_table.private-routing-table",
            "aws_subnet.private-subnets",
            "aws_vpc.nallabirudu95"
          ]
        },
        {
          "index_key": 5,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0af47adbc7692c8e9",
            "route_table_id": "rtb-0d4f78a52550c33af",
            "subnet_id": "subnet-0bea14a6bdd0a5263"
          },
          "dependencies": [
            "aws_route_table.private-routing-table",
            "aws_subnet.private-subnets",
            "aws_vpc.nallabirudu95"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "terraform-public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-06f9bc5f179606a49",
            "route_table_id": "rtb-08c1b7859eea70e89",
            "subnet_id": "subnet-03aa9de19f86743e9"
          },
          "dependencies": [
            "aws_internet_gateway.pawan",
            "aws_route_table.public-routing-table",
            "aws_subnet.public-subnets",
            "aws_vpc.nallabirudu95"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0cb2df174c6056e89",
            "route_table_id": "rtb-08c1b7859eea70e89",
            "subnet_id": "subnet-02aaa5df351ffda69"
          },
          "dependencies": [
            "aws_internet_gateway.pawan",
            "aws_route_table.public-routing-table",
            "aws_subnet.public-subnets",
            "aws_vpc.nallabirudu95"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-06c96331c375d901e",
            "route_table_id": "rtb-08c1b7859eea70e89",
            "subnet_id": "subnet-0585d458dc0f21c27"
          },
          "dependencies": [
            "aws_internet_gateway.pawan",
            "aws_route_table.public-routing-table",
            "aws_subnet.public-subnets",
            "aws_vpc.nallabirudu95"
          ]
        },
        {
          "index_key": 3,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-08efeed7418621238",
            "route_table_id": "rtb-08c1b7859eea70e89",
            "subnet_id": "subnet-0ea78d7f4a81b5a8a"
          },
          "dependencies": [
            "aws_internet_gateway.pawan",
            "aws_route_table.public-routing-table",
            "aws_subnet.public-subnets",
            "aws_vpc.nallabirudu95"
          ]
        },
        {
          "index_key": 4,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-06229618b9a89f2d8",
            "route_table_id": "rtb-08c1b7859eea70e89",
            "subnet_id": "subnet-0ef9d9a58b9573c22"
          },
          "dependencies": [
            "aws_internet_gateway.pawan",
            "aws_route_table.public-routing-table",
            "aws_subnet.public-subnets",
            "aws_vpc.nallabirudu95"
          ]
        },
        {
          "index_key": 5,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-010d28570236da7ea",
            "route_table_id": "rtb-08c1b7859eea70e89",
            "subnet_id": "subnet-0716e297be699c3d9"
          },
          "dependencies": [
            "aws_internet_gateway.pawan",
            "aws_route_table.public-routing-table",
            "aws_subnet.public-subnets",
            "aws_vpc.nallabirudu95"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "allow_all",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:049514682411:security-group/sg-001638ab192e0e3b0",
            "description": "Allow all inbound traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-001638ab192e0e3b0",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "TLS from VPC",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "name": "allow_all",
            "name_prefix": "",
            "owner_id": "049514682411",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0e8cabe7eec389807"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.nallabirudu95"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private-subnets",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:049514682411:subnet/subnet-057cdaa2f68ba1deb",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.50.10.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-057cdaa2f68ba1deb",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "049514682411",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "private-subnet-1"
            },
            "tags_all": {
              "Name": "private-subnet-1"
            },
            "vpc_id": "vpc-0e8cabe7eec389807"
          },
          "dependencies": [
            "aws_vpc.nallabirudu95"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:049514682411:subnet/subnet-044c4b4f1914b957a",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.50.20.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-044c4b4f1914b957a",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "049514682411",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "private-subnet-2"
            },
            "tags_all": {
              "Name": "private-subnet-2"
            },
            "vpc_id": "vpc-0e8cabe7eec389807"
          },
          "dependencies": [
            "aws_vpc.nallabirudu95"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:049514682411:subnet/subnet-06659d37ca5fc7df4",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.50.30.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-06659d37ca5fc7df4",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "049514682411",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "private-subnet-3"
            },
            "tags_all": {
              "Name": "private-subnet-3"
            },
            "vpc_id": "vpc-0e8cabe7eec389807"
          },
          "dependencies": [
            "aws_vpc.nallabirudu95"
          ]
        },
        {
          "index_key": 3,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:049514682411:subnet/subnet-054f2cc3d56bf4773",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.50.40.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-054f2cc3d56bf4773",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "049514682411",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "private-subnet-4"
            },
            "tags_all": {
              "Name": "private-subnet-4"
            },
            "vpc_id": "vpc-0e8cabe7eec389807"
          },
          "dependencies": [
            "aws_vpc.nallabirudu95"
          ]
        },
        {
          "index_key": 4,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:049514682411:subnet/subnet-0c3ce9c7f74b075f2",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.50.50.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0c3ce9c7f74b075f2",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "049514682411",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "private-subnet-5"
            },
            "tags_all": {
              "Name": "private-subnet-5"
            },
            "vpc_id": "vpc-0e8cabe7eec389807"
          },
          "dependencies": [
            "aws_vpc.nallabirudu95"
          ]
        },
        {
          "index_key": 5,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:049514682411:subnet/subnet-0bea14a6bdd0a5263",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.50.60.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0bea14a6bdd0a5263",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "049514682411",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "private-subnet-6"
            },
            "tags_all": {
              "Name": "private-subnet-6"
            },
            "vpc_id": "vpc-0e8cabe7eec389807"
          },
          "dependencies": [
            "aws_vpc.nallabirudu95"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public-subnets",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:049514682411:subnet/subnet-03aa9de19f86743e9",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.50.1.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-03aa9de19f86743e9",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "049514682411",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "public-subnet-1"
            },
            "tags_all": {
              "Name": "public-subnet-1"
            },
            "vpc_id": "vpc-0e8cabe7eec389807"
          },
          "dependencies": [
            "aws_vpc.nallabirudu95"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:049514682411:subnet/subnet-02aaa5df351ffda69",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.50.2.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-02aaa5df351ffda69",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "049514682411",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "public-subnet-2"
            },
            "tags_all": {
              "Name": "public-subnet-2"
            },
            "vpc_id": "vpc-0e8cabe7eec389807"
          },
          "dependencies": [
            "aws_vpc.nallabirudu95"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:049514682411:subnet/subnet-0585d458dc0f21c27",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.50.3.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0585d458dc0f21c27",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "049514682411",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "public-subnet-3"
            },
            "tags_all": {
              "Name": "public-subnet-3"
            },
            "vpc_id": "vpc-0e8cabe7eec389807"
          },
          "dependencies": [
            "aws_vpc.nallabirudu95"
          ]
        },
        {
          "index_key": 3,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:049514682411:subnet/subnet-0ea78d7f4a81b5a8a",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.50.4.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0ea78d7f4a81b5a8a",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "049514682411",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "public-subnet-4"
            },
            "tags_all": {
              "Name": "public-subnet-4"
            },
            "vpc_id": "vpc-0e8cabe7eec389807"
          },
          "dependencies": [
            "aws_vpc.nallabirudu95"
          ]
        },
        {
          "index_key": 4,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:049514682411:subnet/subnet-0ef9d9a58b9573c22",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.50.5.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0ef9d9a58b9573c22",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "049514682411",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "public-subnet-5"
            },
            "tags_all": {
              "Name": "public-subnet-5"
            },
            "vpc_id": "vpc-0e8cabe7eec389807"
          },
          "dependencies": [
            "aws_vpc.nallabirudu95"
          ]
        },
        {
          "index_key": 5,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:049514682411:subnet/subnet-0716e297be699c3d9",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.50.6.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0716e297be699c3d9",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "049514682411",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "public-subnet-6"
            },
            "tags_all": {
              "Name": "public-subnet-6"
            },
            "vpc_id": "vpc-0e8cabe7eec389807"
          },
          "dependencies": [
            "aws_vpc.nallabirudu95"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "nallabirudu95",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:049514682411:vpc/vpc-0e8cabe7eec389807",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.50.0.0/16",
            "default_network_acl_id": "acl-0c7665aa3c0638eb2",
            "default_route_table_id": "rtb-04d966036886a70e5",
            "default_security_group_id": "sg-038f177f05637c39d",
            "dhcp_options_id": "dopt-0991a1316902ece3a",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0e8cabe7eec389807",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-04d966036886a70e5",
            "owner_id": "049514682411",
            "tags": {
              "Name": "surya",
              "enviroment": "production"
            },
            "tags_all": {
              "Name": "surya",
              "enviroment": "production"
            }
          }
        }
      ]
    }
  ]
}